@@ -2818,11 +2818,10 @@ public class Sense extends StdLibrary implements CMFlagLibrary
 		final Rideable mount=mob.riding();
 		if(mount == null)
 			return false;
-		if((mount.rideBasis()!=Rideable.Basis.LAND_BASED)
-			&&(mount.rideBasis()!=Rideable.Basis.LAND_BASED)
-			&&(mount.rideBasis()!=Rideable.Basis.AIR_FLYING)
-			&&((mount.rideBasis()!=Rideable.Basis.WATER_BASED)||(CMLib.flags().isWateryRoom(mob.location()))))
-				return false;
+		if(!mount.isMobileRideBasis())
+			return false;
+		if((mount.rideBasis()==Rideable.Basis.WATER_BASED)&&(!CMLib.flags().isWateryRoom(mob.location())))
+			return false;
 		return true;
 	}
 }
