@@ -1048,6 +1048,12 @@ only allowed to those of the qualifying class, and also gains the \
 ability to pick up and equip items which would normally fly away \
 from the scholars hands if normally attempted.
 
+FIGHTER_CONFIDENTVANITY=CONFIDENT_VANITY
+CONFIDENTVANITY=CONFIDENT_VANITY
+CONFIDENT_VANITY=<ABILITY>\
+The foppish fighter gains added attack based upon the obvious value of his or her clothing. \
+Wearing exquisitely crafted armor provides additional attack bonuses.
+
 PALADIN_CORRUPTION=PALADIN`S_CORRUPTION
 PALADIN\'S_CORRUPTION=PALADIN`S_CORRUPTION
 PALADINS_CORRUPTION=PALADIN`S_CORRUPTION
@@ -3284,6 +3290,15 @@ MOUNTED_COMBAT=<ABILITY>\
 Example  : \n\r\
 This skill helps negate the bad consequences of fighting from horseback or \
 from a boat or other vehicle.
+
+FIGHTER_MOUNTEDRETREAT=MOUNTED_RETREAT
+MOUNTEDRETREAT=MOUNTED_RETREAT
+MOUNTED_RETREAT=<ABILITY>\
+Usage    : MOUNTEDRETREAT ([DIRECTION])\n\r\
+Example  : mretreat east\n\r\
+Short(s) : mretreat, mflee\n\r\
+The Fighter, from the back of a mount, executes a dignified retreat from combat, \
+without losing experience.
 
 THIEF_MUG=MUG
 MUG=<ABILITY>\
